Добавлен data class MyProfileInfo дл